fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
   }
   .section-head {
     font-size: 2.5rem;
-    margin: 0;
+    color:#000;
   }
 
   #intro {
@@ -140,7 +140,7 @@ padding: 18px 2%;
 }
 
 .nav > li > a:hover {
-   color: #000;
+   color: #FECCC6;
 }
 
 nav a#logo {
@@ -151,7 +151,7 @@ display: none;
  #connect {
   border-bottom: 1px solid #f0eeee;
   border-top: 1px solid #f0eeee;
-      padding:8rem;
+      padding:2rem;
   }
   .connect ul {
     list-style: none;
@@ -165,7 +165,7 @@ display: none;
   }
 
   #about {
-      padding:8rem;
+    padding:6rem;
   }
 
   i {
@@ -236,8 +236,8 @@ display: none;
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background:#9A7D0A;
-  background: #9A7D0A;
+  background:#FECCC6;
+  background: #FECCC6;
   width: 50px;
   height: 50px;
   display: block;
@@ -253,7 +253,7 @@ display: none;
   transition: all 0.3s ease;
 }
 #return-to-top i {
-  color: #fff;
+  color: #9A7D0A;
   margin: 0;
   position: relative;
   left: 16px;
@@ -266,10 +266,10 @@ display: none;
   transition: all 0.3s ease;
 }
 #return-to-top:hover {
-  background: #caa40d;
+  background: #FECCC6;
 }
 #return-to-top:hover i {
-  color: #fff;
+  color: #9A7D0A;
   top: 5px;
 }
 
